# openglTemplate-macos-arm64

./: CMakeLists.txt
dependencies/glad/: glad.h
src/: glad.c  main.cpp
